create class to represent messages